# holo-hanafuda-assistant

./: LICENSE  README.md  pyproject.toml
examples/: sample_state.json  test_state.json
src/holo_hanafuda/: __init__.py  cards.py  cli.py  gui.py  holo_roles.py  koikoi_rules.py  koikoi_strategy.py  oicho_kabu.py  state.py  vision.py
src/holo_hanafuda/tools/: slice_hanafuda_grid.py
src/holo_hanafuda_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
